--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     transition: background 0.3s, color 0.3s, transform 0.2s;
     z-index: 10;
   }
+  .circle .circle2 {
+    left: 5% !important;
+  }
   @media (min-width: 500px) { .circle { font-size: 46px; } }
 
   .count-3 { background: #ffeb3b !important; }
@@ -50,7 +53,7 @@
   #ball {
     position: absolute;
     top: 45%; 
-    left: 50%;
+    left: 48%;
     width: 17%;
     height: 17%;
     margin: -8.5% 0 0 -8.5%;
@@ -62,17 +65,17 @@
     justify-content: center;
     box-shadow: 0 10px 30px rgba(0,0,0,0.8);
     z-index: 20;
-    transition: transform 0.45s cubic-bezier(0.2,0.8,0.4,1);
+    transition: transform 0.25s cubic-bezier(0.2,0.8,0.4,1);
   }
   @media (min-width: 500px) { #ball { font-size: 62px; } }
 
   /* 魔法棒固定在足球下方，可长按拖动 */
   #magicWand {
     position: absolute;
-    top: 65%;
-    left: 50%;
+    top: 62%;
+    left: 47.5%;
     transform: translateX(-50%);
-    width: 72px; height: 72px;
+    width: 55px; height: 55px;
     background: gold url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black"><path d="M19 3l-2.5 2.5L18 7l-1.5 1.5L19 11l2.5-2.5L20 7l1.5-1.5L19 3zM2 6l3 3 10 10 3-3L8 6 2 6z"/></svg>') center/70% no-repeat;
     border-radius: 50%;
     box-shadow: 0 6px 25px rgba(0,0,0,0.6);
@@ -106,12 +109,14 @@
   .history {
     position: absolute;
     left: 50%;
-    top: 110%;
+    top: 105%;
     transform: translateX(-50%);
     font-size: 14px;
     color: #88c0ff;
     white-space: nowrap;
     pointer-events: none;
+    text-wrap: wrap;
+    width: 75px;
   }
   @media (min-width: 500px) { .history { font-size: 18px; } }
 </style>
@@ -131,12 +136,12 @@
 
   <div class="circle" data-id="0"><span>0</span><div class="history"></div></div>
   <div class="circle" data-id="1"><span>0</span><div class="history"></div></div>
-  <div class="circle" data-id="2"><span>0</span><div class="history"></div></div>
+  <div class="circle" data-id="2" style="left:5%"><span>0</span><div class="history"></div></div>
   <div class="circle" data-id="3"><span>0</span><div class="history"></div></div>
   <div class="circle" data-id="4"><span>0</span><div class="history"></div></div>
-  <div class="circle" data-id="5"><span>0</span><div class="history"></div></div>
+  <div class="circle" data-id="5"><span>0</span><div class="history" style="top: -50%"></div></div>
   <div class="circle" data-id="6"><span>0</span><div class="history"></div></div>
-  <div class="circle" data-id="7"><span>0</span><div class="history"></div></div>
+  <div class="circle" data-id="7" style="left:90%"><span>0</span><div class="history"></div></div>
   <div class="circle" data-id="8"><span>0</span><div class="history"></div></div>
 
   <div id="ball">&nbsp</div>
@@ -156,6 +161,13 @@ document.querySelectorAll('.circle').forEach((c, i) => {
   const top  = centerY + radius * Math.sin(rad);
   c.style.left = left + '%';
   c.style.top  = top + '%';
+  if (i == 2) {
+    c.style.left = '5%';
+    c.style.top = '56%';
+  } else if (i == 7) {
+    c.style.left = '90%';
+    c.style.top = '56%';
+  }
   c.style.transform = 'translate(-50%, -50%)';
 });
 
