--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
     transition: background 0.3s, color 0.3s, transform 0.2s;
     z-index: 10;
   }
-  .circle .circle2 {
-    left: 5% !important;
-  }
   @media (min-width: 500px) { .circle { font-size: 46px; } }
 
   .count-3 { background: #ffeb3b !important; }
@@ -136,12 +133,12 @@
 
   <div class="circle" data-id="0"><span>0</span><div class="history"></div></div>
   <div class="circle" data-id="1"><span>0</span><div class="history"></div></div>
-  <div class="circle" data-id="2" style="left:5%"><span>0</span><div class="history"></div></div>
+  <div class="circle" data-id="2"><span>0</span><div class="history"></div></div>
   <div class="circle" data-id="3"><span>0</span><div class="history"></div></div>
   <div class="circle" data-id="4"><span>0</span><div class="history"></div></div>
-  <div class="circle" data-id="5"><span>0</span><div class="history" style="top: -50%"></div></div>
+  <div class="circle" data-id="5"><span>0</span><div class="history"></div></div>
   <div class="circle" data-id="6"><span>0</span><div class="history"></div></div>
-  <div class="circle" data-id="7" style="left:90%"><span>0</span><div class="history"></div></div>
+  <div class="circle" data-id="7"><span>0</span><div class="history"></div></div>
   <div class="circle" data-id="8"><span>0</span><div class="history"></div></div>
 
   <div id="ball">&nbsp</div>
